k8s/create-list-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices-createlist
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservices-createlist
  template:
    metadata:
      labels:
        app: microservices-createlist
    spec:
      containers:
        - name: microservices-createlist
          image: ashtamkereliran/microserveices-nodejs-project-createlist:latest
          ports:
            - containerPort: 8005
