k8s/create-task-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices-createtask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservices-createtask
  template:
    metadata:
      labels:
        app: microservices-createtask
    spec:
      containers:
        - name: microservices-createtask
          image: omeratt/microserveices-createtask:latest
          ports:
            - containerPort: 8001
