k8s/delete-task-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices-deletetask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservices-deletetask
  template:
    metadata:
      labels:
        app: microservices-deletetask
    spec:
      containers:
        - name: microservices-deletetask
          image: omeratt/microserveices-deletetask:latest
          ports:
            - containerPort: 8002
