k8s/deletelist-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices-deletelist
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservices-deletelist
  template:
    metadata:
      labels:
        app: microservices-deletelist
    spec:
      containers:
        - name: microservices-deletelist
          image: ashtamkereliran/deletelist:latest
          ports:
            - containerPort: 9001
