k8s/deletelistpy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices-deletelistpy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservices-deletelistpy
  template:
    metadata:
      labels:
        app: microservices-deletelistpy
    spec:
      containers:
        - name: microservices-deletelistpy
          image: ashtamkereliran/deletelistpy:latest
          ports:
            - containerPort: 8007
