k8s/get-all-lists-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices-getalllists
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservices-getalllists
  template:
    metadata:
      labels:
        app: microservices-getalllists
    spec:
      containers:
        - name: microservices-getalllists
          image: ashtamkereliran/microserveices-nodejs-project-getalllists:latest
          ports:
            - containerPort: 8004
