k8s/get-all-tasks-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices-getalltasks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservices-getalltasks
  template:
    metadata:
      labels:
        app: microservices-getalltasks
    spec:
      containers:
        - name: microservices-getalltasks
          image: ashtamkereliran/microserveices-nodejs-project-getalltasks:latest
          ports:
            - containerPort: 8006
