k8s/update-task-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices-updatetask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservices-updatetask
  template:
    metadata:
      labels:
        app: microservices-updatetask
    spec:
      containers:
        - name: microservices-updatetask
          image: ashtamkereliran/microserveices-nodejs-project-updatetask:latest
          ports:
            - containerPort: 8003
