k8s/delete-task-service.yml
apiVersion: v1
kind: Service
metadata:
  name: microservices-deletetask
spec:
  selector:
    app: microservices-deletetask
  ports:
    - name: microservices-deletetask
      port: 8000
      targetPort: 8002
  type: ClusterIP
