k8s/get-all-lists-service.yml
apiVersion: v1
kind: Service
metadata:
  name: microservices-getalllists
spec:
  selector:
    app: microservices-getalllists
  ports:
    - name: microservices-getalllists
      port: 8000
      targetPort: 8004
  type: ClusterIP
