k8s/get-all-tasks-service.yml
apiVersion: v1
kind: Service
metadata:
  name: microservices-getalltasks
spec:
  selector:
    app: microservices-getalltasks
  ports:
    - name: microservices-getalltasks
      port: 8000
      targetPort: 8006
  type: ClusterIP
