k8s/randomcolorjs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: microservices-randomcolorjs
spec:
  selector:
    app: microservices-randomcolorjs
  ports:
    - name: microservices-randomcolorjs
      port: 8000
      targetPort: 9000
  type: ClusterIP
