k8s/randomcolorpy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: microservices-randomcolorpy
spec:
  selector:
    app: microservices-randomcolorpy
  ports:
    - name: microservices-randomcolorpy
      port: 8000
      targetPort: 8008
  type: ClusterIP
