k8s/update-task-service.yml
apiVersion: v1
kind: Service
metadata:
  name: microservices-updatetask
spec:
  selector:
    app: microservices-updatetask
  ports:
    - name: microservices-updatetask
      port: 8000
      targetPort: 8003
  type: ClusterIP
