k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-getalltasks
                port:
                  number: 8006
          - path: /getalltasks/?(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-getalltasks
                port:
                  number: 8006
          - path: /createtask/?(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-createtask
                port:
                  number: 8001
          - path: /deleteTask/?(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-deletetask
                port:
                  number: 8002
          - path: /updateTask/?(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-updatetask
                port:
                  number: 8003
          - path: /getAllLists/?(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-getalllists
                port:
                  number: 8004
          - path: /createList/?(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-createlist
                port:
                  number: 8005
          - path: /deletelistpy/?(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-deletelistpy
                port:
                  number: 8007
          - path: /randomcolorpy/?(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-randomcolorpy
                port:
                  number: 8008
          - path: /randomcolorjs/?(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-randomcolorjs
                port:
                  number: 9000
          - path: /deletelist/?(.*)
            pathType: Prefix
            backend:
              service:
                name: microservices-deletelist
                port:
                  number: 9001
